--- a/nodejs/routing/views/index.html
+++ b/nodejs/routing/views/index.html
@@ -19,10 +19,47 @@
     h1 {
       text-transform: uppercase;
     }
+    nav {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      min-height: 60px;
+      display: flex;
+      justify-content: flex-end;
+      background-color: rgba(0,0,0,0.7);
+    }
+
+    nav ul {
+      margin: 0;
+      padding: 0;
+      display: flex;
+    }
+
+    nav li {
+      list-style: none;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #fff;
+      min-height: 60px;
+      display: block;
+      padding: 10px 20px;
+      line-height: 60px;
+    }
   </style>
 </head>
 <body>
-  <h1>Home</h1>
-  <p>Welcome!</p>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/posts">Posts</a></li>
+      <li><a href="/add-post">New Post</a></li>
+      <li><a href="/contacts">Contacts</a></li>
+    </ul>
+  </nav>
+  <h1>Blog</h1>
+  <p>Build with Node.js Express, EJS, MongoDB</p>
 </body>
 </html>
