--- a/nodejs/routing/views/posts.html
+++ b/nodejs/routing/views/posts.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Nodejs</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <style>
     body {
       padding-top: 80px;
@@ -31,12 +32,7 @@
 
     nav ul {
       margin: 0;
-      padding: 0;
       display: flex;
-    }
-
-    nav li {
-      list-style: none;
     }
 
     nav a {
@@ -46,9 +42,33 @@
       line-height: 60px;
     }
 
+    li {
+      list-style: none;
+    }
+
+    ul {
+      padding: 0;
+    }
+
     a {
       text-decoration: none;
       color: #fff;
+    }
+
+    article {
+      background-color: rgba(0,0,0,0.4);
+      padding: 10px 20px;
+      border-radius: 3px;
+      margin-bottom: 10px;
+    }
+
+    .info {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    h2 a {
+      color: aqua;
     }
   </style>
 </head>
@@ -61,9 +81,20 @@
       <li><a href="/contacts">Contacts</a></li>
     </ul>
   </nav>
-  <h1>Contacts:</h1>
+  <h1>Posts:</h1>
   <ul>
-    <li><a href="https://github.com/Dash-02">GitHub</a></li>
+    <li>
+      <article>
+        <h2>
+          <a href="/posts/1">Post title</a>
+        </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quidem provident, dolores, vero laboriosam nemo mollitia impedit unde fugit sint eveniet, minima odio ipsum sed recusandae aut iste aspernatur dolorem.</p>
+        <div class="info">
+          <span>28.07.2023</span>
+          <span>Author</span>
+        </div>
+      </article>
+    </li>
   </ul>
 </body>
 </html>
