--- a/nodejs/routing/ejs-views/contacts.ejs
+++ b/nodejs/routing/ejs-views/contacts.ejs
@@ -53,14 +53,7 @@
   </style>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/posts">Posts</a></li>
-      <li><a href="/add-post">New Post</a></li>
-      <li><a href="/contacts">Contacts</a></li>
-    </ul>
-  </nav>
+  <%- include('./partials/nav.ejs') %>
   <h1>Contacts:</h1>
   <ul>
     <li><a href="https://github.com/Dash-02">GitHub</a></li>
