--- a/nodejs/routing/ejs-views/posts.ejs
+++ b/nodejs/routing/ejs-views/posts.ejs
@@ -73,14 +73,7 @@
   </style>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/posts">Posts</a></li>
-      <li><a href="/add-post">New Post</a></li>
-      <li><a href="/contacts">Contacts</a></li>
-    </ul>
-  </nav>
+  <%- include('./partials/nav.ejs') %>
   <h1>Posts:</h1>
   <ul>
     <li>
