--- a/nodejs/routing/ejs-views/error.ejs
+++ b/nodejs/routing/ejs-views/error.ejs
@@ -2,26 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Nodejs</title>
+  <title>Nodejs | <%= title %></title>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <style>
-    body {
-      display: flex;
-      min-height: 100vh;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      font-family: 'Roboto', sans-serif;
-      font-size: 20px;
-      background: linear-gradient(to bottom, #00d2ff, #928dab);
-      color: #fff;
-    }
-    .error-code {
-      text-transform: uppercase;
-      font-size: 160px;
-      margin-bottom: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="/main.css">
 </head>
 <body>
   <h1 class="error-code">404</h1>
