--- a/nodejs/routing/ejs-views/error.ejs
+++ b/nodejs/routing/ejs-views/error.ejs
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Nodejs | <%= title %></title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/main.css">
-</head>
+<%- include('./partials/head.ejs') %>
 <body>
   <h1 class="error-code">404</h1>
   <p>Something going wrong...</p>
