--- a/nodejs/routing/ejs-views/index.ejs
+++ b/nodejs/routing/ejs-views/index.ejs
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Nodejs | <%= title %></title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/main.css">
-</head>
+<%- include('./partials/head.ejs') %>
 <body>
   <%- include('./partials/nav.ejs') %>
   <h1>Blog</h1>
