--- a/nodejs/routing/ejs-views/posts.ejs
+++ b/nodejs/routing/ejs-views/posts.ejs
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Nodejs | <%= title %></title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/main.css">
-</head>
+<%- include('./partials/head.ejs') %>
 <body>
   <%- include('./partials/nav.ejs') %>
   <h1>Posts:</h1>
   <ul>
-    <li>
-      <article>
-        <h2>
-          <a href="/posts/1">Post title</a>
-        </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quidem provident, dolores, vero laboriosam nemo mollitia impedit unde fugit sint eveniet, minima odio ipsum sed recusandae aut iste aspernatur dolorem.</p>
-        <div class="info">
-          <span>28.07.2023</span>
-          <span>Author</span>
-        </div>
-      </article>
-    </li>
+    <% if (posts.length) { %>
+      <% posts.forEach(({ id, title, date, text, author }) => { %>
+        <li>
+          <article>
+            <h2>
+              <a href="/posts/<%= id %>"><%= title %></a>
+            </h2>
+            <p><%= text %></p>
+            <div class="info">
+              <span><%= date %></span>
+              <span><%= author %></span>
+            </div>
+          </article>
+        </li>
+      <% }) %>
+    <% } %>
   </ul>
 </body>
 </html>
