--- a/nodejs/routing/ejs-views/posts.ejs
+++ b/nodejs/routing/ejs-views/posts.ejs
@@ -14,7 +14,8 @@
             </h2>
             <p><%= text %></p>
             <div class="info">
-              <span><%= date %></span>
+              <!-- <span><%= createdAt.toLocaleDateString() %></span> -->
+              <!-- <span><%= date %></span> -->
               <span><%= author %></span>
             </div>
           </article>
