--- a/nodejs/routing/ejs-views/post.ejs
+++ b/nodejs/routing/ejs-views/post.ejs
@@ -5,8 +5,7 @@
   <%- include('./partials/nav.ejs') %>
   <article>
     <div class="info">
-      <span><%= post.createdAt.toLocaleDateString() || 'No date' %></span>
-      <!-- <span><%= post.date || 'No date' %></span> -->
+      <span><%= post.createdAt ? post.createdAt.toLocaleDateString() : 'No date' %></span>
       <span><%= post.author %></span>
     </div>
     <h1><%= post.title %></h1>
